--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "slugify": "^1.0.2",
     "vue": "^2.5.0",
     "vue-global-events": "^1.0.2",
+    "vue-i18n": "^8.22.4",
     "vue-virtual-scroller": "^0.5.0",
     "vuequery": "~2.1.1",
     "youtube-player": "^3.0.4"
